# pipeline-rest-api

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/: oas.yaml
src/tgedr/pipeline/restapi/: app.py
src/tgedr/pipeline/restapi/scoring/: api.py  schemas.py
