[metadata]
name = tgedr-pipeline-rest-api
version = 0.0.0
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/pipeline-rest-api
description = This package provides a blue print for a rest api
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find_namespace:
install_requires =
    pytest
    fastapi==0.70.0
    pydantic==1.8.2
    starlette==0.16.0
[options.packages.find]
where=src
